--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -24,38 +24,61 @@
       <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
     </filter> 
 
+	<!-- My custom filter test -->
+	<filter>
+	   <filter-name>CustomFilter</filter-name>
+	   <filter-class>org.lalosuarez.app.filter.MyCustomFilter</filter-class>
+	   <init-param>
+		  <param-name>test-param</param-name>
+		  <param-value>Initialization Parameter</param-value>
+	   </init-param>
+	</filter>
+
     <filter>
         <filter-name>struts2-execute</filter-name>
         <filter-class>org.apache.struts2.dispatcher.ng.filter.StrutsExecuteFilter</filter-class>
     </filter>
 	
+	<!-- Struts2 prepare mapping -->
 	<filter-mapping>
       <filter-name>struts2-prepare</filter-name>
       <url-pattern>/*</url-pattern>
     </filter-mapping>
-    
-    <!-- Sitemesh decorators -->
+     
+    <!-- Sitemesh decorators mapping -->
     <filter-mapping>
       <filter-name>sitemesh</filter-name>
-      <url-pattern>/*</url-pattern>
+      <url-pattern>/admin/*</url-pattern>
     </filter-mapping>
 
-    <!-- Spring Security -->
+    <!-- Spring Security mapping -->
     <filter-mapping>
       <filter-name>springSecurityFilterChain</filter-name>
       <url-pattern>/*</url-pattern>
     </filter-mapping> 
 
+	<!-- Struts2 execute mapping -->
     <filter-mapping>
       <filter-name>struts2-execute</filter-name>
-      <url-pattern>/*</url-pattern>
+      <url-pattern>/admin/*</url-pattern>
     </filter-mapping>
+    
+    <filter-mapping>
+      <filter-name>struts2-execute</filter-name>
+      <url-pattern>/login/*</url-pattern>
+    </filter-mapping>    
 
+	<!-- My custom filter test mapping 
+	<filter-mapping>
+	   <filter-name>CustomFilter</filter-name>
+	   <url-pattern>/*</url-pattern>
+	</filter-mapping> -->
+	
     <listener>
       <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-    </listener>
+    </listener> 
 
-     
+    <!-- Servlet de prueba -->
     <servlet>
     	<description>Servlet Description</description>
     	<display-name>TestServlet</display-name>
@@ -67,6 +90,7 @@
     	<url-pattern>/servlet/testServlet</url-pattern>
     </servlet-mapping>
 
+	<!-- Jax-rs support -->
  	<servlet>
  		<servlet-name>jersey-serlvet</servlet-name>
 		
@@ -92,7 +116,31 @@
 		<servlet-name>jersey-serlvet</servlet-name>
 		<url-pattern>/rest/*</url-pattern>
 	</servlet-mapping>
-	 		
+
+    <!-- Servlet for jax-ws -->	    
+	<servlet>
+		<servlet-name>jaxws-servlet</servlet-name>
+		<servlet-class>com.sun.xml.ws.transport.http.servlet.WSSpringServlet</servlet-class>
+<!-- 		<servlet-class>com.sun.xml.ws.transport.http.servlet.WSServlet</servlet-class> -->
+		<load-on-startup>1</load-on-startup>
+	</servlet>
+	
+	<servlet-mapping>
+		<servlet-name>jaxws-servlet</servlet-name>
+		<url-pattern>/soap/soccer/leagues</url-pattern>
+	</servlet-mapping>
+	
+	<servlet-mapping>
+		<servlet-name>jaxws-servlet</servlet-name>
+		<url-pattern>/soap/*</url-pattern>
+	</servlet-mapping>	
+	
+	<listener>
+		<listener-class>
+			com.sun.xml.ws.transport.http.servlet.WSServletContextListener
+		</listener-class>
+	</listener>
+			
 	<welcome-file-list>
       <welcome-file>index.jsp</welcome-file>
 	  <welcome-file>default.jsp</welcome-file>
